2006-06-22  Iain Holmes  <iain@openedhand.com>

	* clutter/clutter-group.c: More typo fixes

	* clutter/clutter-event.c: Documentation

2006-06-22  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-timeline.h:
	* clutter/clutter-timeline.c: Add a "started" and a "paused"
	signals; add more sanity checks on the public functions.
	
	(clutter_timeline_get_loop): Add a getter function for the
	loop property.

	* clutter/clutter-marshal.list: Add marshallers.

	* clutter/clutter-timeline.h:
	* clutter/clutter-actor.h: Add padding for future expansion
	without breaking ABI.
	
2006-06-22  Iain Holmes  <iain@openedhand.com>

	* clutter/clutter-actor.c: Fix some typos in the docs.

2006-06-22  Iain Holmes  <iain@openedhand.com>

	* clutter/clutter-util.c: And more

2006-06-22  Ross Burton  <ross@openedhand.com>

	* clutter/clutter-label.c:
	* clutter/clutter-video-texture.c:
	* clutter/clutter-texture.c:
	* clutter/clutter-timeline.c:
	* clutter/clutter-group.c:
	Fix gtk-doc problems.

2006-06-22  Iain Holmes  <iain@openedhand.com>

	* clutter/clutter-main.c: More documentation

2006-06-22  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-main.h:
	Remove bogus xvisual call. 

2006-06-22  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-actor.h:
	Remove mirroring related calls ( unimplemented )
	* gtk/gtk-clutter-test.c: 0 -> NULL

2006-06-22  Iain Holmes  <iain@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-stage.c:
	* gtk/gtk-clutter.c: More docs

2006-06-22  Iain Holmes  <iain@openedhand.com>

	* clutter/clutter-actor.c: Added some more docs.

2006-06-22  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-clone-texture.c:
	* clutter/clutter-color.c:
	* clutter/clutter-event.c:
	* clutter/clutter-group.c:
	* clutter/clutter-label.c:
	* clutter/clutter-main.c:
	* clutter/clutter-media.c:
	* clutter/clutter-rectangle.c:
	* clutter/clutter-stage.c: